2010-12-08  Ingo Weinzierl <ingo@intevation.de>

	* build.xml: Abhängigkeit vom Ant `run` Target von `dist` zu `compile`
	  geändert. Es ist nun nicht mehr notwendig ein Jar-Archiv zu erstellen, um
	  die Anwendung auszuführen - es reicht das übersetzen der Quellen.
	  Außerdem wurden den übersetzten Klassen DEBUG Informationen hinzugefügt,
	  damit Stack-Traces u.a. Zeilennummern enthalten.

2010-12-07  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Bugfix: Die Parameter in der Parameterauswahl sind nun selektierbar.

2010-12-07  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Oberfläche zur Eingabe von Probenahmedetails um weitere Parameter
	  erweitert.

	  TODO: Werte aus der Oberfläche in die DB persistieren.

2010-12-03  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/AbstractModul.java,
	  src/de/bielefeld/umweltamt/aui/AUIKSplash.java,
	  src/de/bielefeld/umweltamt/aui/module/objektpanels/Anh55Panel.java,
	  src/de/bielefeld/umweltamt/aui/module/objektpanels/UebergabePanel.java,
	  src/de/bielefeld/umweltamt/aui/module/objektpanels/ProbepktAuswPanel.java,
	  src/de/bielefeld/umweltamt/aui/module/objektpanels/ChronoPanel.java,
	  src/de/bielefeld/umweltamt/aui/module/objektpanels/ProbepunktPanel.java,
	  src/de/bielefeld/umweltamt/aui/module/objektpanels/BasisPanel.java,
	  src/de/bielefeld/umweltamt/aui/module/objektpanels/Anh52Panel.java,
	  src/de/bielefeld/umweltamt/aui/module/EinleiterSuevkanAuswertung.java,
	  src/de/bielefeld/umweltamt/aui/module/common/SchlammPanel.java,
	  src/de/bielefeld/umweltamt/aui/module/common/editors/StandortEditor.java,
	  src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java,
	  src/de/bielefeld/umweltamt/aui/module/EinleiterAnh49Auswertung.java,
	  src/de/bielefeld/umweltamt/aui/module/BasisStandortSuchen.java,